# hikka

./: .gitignore  DEPLOY.md  Dockerfile  README.md  aggregator.py  app.py  cli.py  devenv.nix  devenv.yaml  doctest.py  dotest.json  fix_aggregator_anime.py  fix_article_views.py  fix_character_names.py  fix_collection_comments.py  fix_comment_replies.py  fix_comments_preview.py  fix_css_background.py  fix_deleted_collection_comments.py  fix_edit_content_preview.py  fix_effects.py  fix_export.py  fix_feed.py  fix_feed_widgets.py  fix_history.py  fix_history_read.py  fix_orphans.py  fix_preview.py  fix_reset_franchises.py  fix_schedule.py  fix_schedule_notifications.py  fix_search.py  fix_start_end.py  fix_strip_description.py  fix_weighted_scores.py  hmac_demo.py  init.py  playground.py  prometheus.yml  pyproject.toml  (+6 more)
.github/workflows/: docker-publish.yml  run-test.yml
alembic/: README.md  env.py
alembic/versions/: 04a78ebfda3d_addeded_comment_vote_model.py  0c8a96ac77c9_added_description_field_to_person.py  0d153972952b_added_upload_model.py  13a8c8325dde_removed_unique_constraint_from_voice.py  1841b8bc0b1b_added_last_change_fields_to_user.py  1a409d817c42_added_entries_field_to_collection.py  2024_05_12_0259-47b1673a82ea_added_private_field_to_comment.py  2024_05_20_1746-36a43fc1f0d7_added_deleted_field_to_anime.py  2024_05_21_0214-bf31e8e30ed4_added_deleted_fields.py  2024_06_01_2007-68c5c7b598d1_manga_migration.py  2024_06_01_2218-64b3937057ee_added_image_id_field.py  2024_06_01_2219-0fa4c5e9a39b_added_year_field_to_manga.py  2024_06_01_2245-b374f1f0de11_removed_title_size_for_manga.py  2024_06_02_0058-801921931ef3_renamed_name_name_en.py  2024_06_05_1754-669174c7334c_removed_franchise_from_anime.py  2024_06_05_1755-369367fef20e_updated_franchise_model.py  2024_06_05_1757-bccaf8250166_added_franchise_relation_to_anime.py  2024_06_05_1758-2dbc8e451a4f_added_franchise_relation_to_manga.py  2024_06_05_2035-8e32142fab6e_universal_genres.py  2024_06_05_2051-4882ac82d08b_removed_legacy_genres.py  2024_06_05_2306-94694e39413e_removed_legacy_manga_author_role.py  2024_06_05_2312-a098f38e56e9_author_role.py  2024_06_05_2335-7c68bcc6ca7b_added_novel_models.py  2024_06_07_1653-156be20e7fb4_added_read_model.py  2024_06_16_0303-7f8d427770eb_added_preview_field_to_comment.py  2024_06_21_0126-3ef5732b5d63_removed_title_native_field.py  2024_06_21_0130-d1f7b083c01e_removed_title_original_from_episode.py  2024_06_23_1419-4c13fdf8868d_added_read_watch_stats_to_user.py  2024_07_06_1322-46bff46ba582_added_moderation_models.py  2024_07_07_0006-3038cd0ae3b0_added_moderation_model.py  2024_07_26_1356-21009df4f5f5_introduce_third_party_clients.py  2024_07_26_2028-96c0d6b7aeba_add_client_updated_column.py  2024_08_07_0116-a4d5b6174fb1_add_client_verified_field.py  2024_08_12_1036-b38d06d1364e_add_used_field_to_authtoken.py  2024_10_19_1602-267f088a8828_added_article_model.py  2024_10_30_2337-ccfd2d8537db_added_article_model.py  2024_10_31_1124-7a805de5e5d8_added_slug_to_the_article.py  2024_11_20_2334-3f1664c50dd2_added_article_content.py  2024_12_15_2256-23086dc47605_user_forbidden_permissions.py  2024_12_18_2111-d2bd8dd78891_added_comments_count_field.py  (+123 more)
app/: __init__.py  activity.py  args.py  constants.py  database.py  dependencies.py  display.py  errors.py  meilisearch.py  middlewares.py  responses.py  schemas.py  service.py  settings.py  utils.py
app/admin/: __init__.py  dependencies.py  router.py  schemas.py  service.py
app/aggregator/: __init__.py  anime.py  characters.py  companies.py  franchises.py  genres.py  info.py  magazines.py  manga.py  novel.py  people.py  roles.py  service.py  staff.py  utils.py
app/anime/: dependencies.py  meilisearch.py  router.py  schemas.py  service.py  utils.py
app/articles/: denepndencies.py  dependencies.py  router.py  schemas.py  service.py
app/artifacts/: dependencies.py  router.py  schemas.py  service.py
app/auth/: constants.py  dependencies.py  oauth.py  router.py  schemas.py  service.py  utils.py
app/characters/: dependencies.py  meilisearch.py  router.py  schemas.py  service.py
app/client/: dependencies.py  router.py  schemas.py  service.py
app/collections/: dependencies.py  router.py  schemas.py  service.py  utils.py
app/comments/: dependencies.py  router.py  schemas.py  service.py  utils.py
app/companies/: dependencies.py  meilisearch.py  router.py  schemas.py  service.py
app/content/: router.py  schemas.py  service.py
app/digests/: __init__.py  dependencies.py  router.py  schemas.py  service.py
app/edit/: dependencies.py  router.py  schemas.py  service.py  utils.py
app/favourite/: __init__.py  dependencies.py  router.py  schemas.py  service.py  views.py
app/feed/: router.py  schemas.py  service.py
app/follow/: dependencies.py  router.py  schemas.py  service.py  views.py
app/genres/: router.py  service.py
docs/: alembic.example.ini  deploy.md  get_test_data.py  misc.md  roles.json  settings.example.toml
service/: __init__.py  constants.py  decorators.py  display.py  errors.py  utils.py
tests/: README.md  client_requests.py  conftest.py  helpers.py  test_auth.py  test_auth_misc.py  test_auth_password.py  test_auth_signup.py  test_helpers.py  test_utils.py
(+690 files in other folders)
