[tool.poetry]
name = "hikka"
version = "0.3.0"
description = "Backend service for hikka.io - Ukrainian anime tracker"
authors = ["Hikka Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = "0.30.6"
sqlalchemy = "^2.0.20"
dynaconf = "^3.2.1"
asyncpg = "^0.28.0"
meilisearch-python-sdk = "2.9.0"
bcrypt = "^4.0.1"
email-validator = "2.0.0.post2"
pytest = "^7.4.0"
pytest-postgresql = "^5.0.0"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.21.1"
aiohttp = "3.10.11"
apscheduler = "3.10.4"
alembic = "^1.11.3"
greenlet = "^3.0.1"
aioboto3 = "^12.1.0"
python-multipart = "0.0.18"
puremagic = "^1.15"
imagesize = "^1.4.1"
sqlalchemy-utils = "^0.41.1"
requests = "^2.32.3"
urllib3 = "2.2.2"
gunicorn = "^22.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
pyinstrument = "^4.6.2"
certifi = "2024.07.04"
starlette = "0.41.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_functions = "test_*"
python_files = "test_*.py"
asyncio_mode = "auto"
testpaths = "tests"
pythonpath = ["."]

[tool.ruff]
line-length = 80
exclude = [".venv", "venv", "alembic"]

[tool.ruff.lint]
extend-ignore = [
    "F821",  # Disable checks for annotated SQLAlchemy relations 
]