[project]
name = "hikka"
version = "0.3.0"
description = "Backend service for hikka.io - Ukrainian anime tracker"
authors = [
  { name = "Hikka Team" }
]
readme = "README.md"
requires-python=">=3.11,<4.0"

dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.30.6",
  "sqlalchemy==2.0.37",
  "greenlet==3.1.1",
  "dynaconf==3.2.1",
  "asyncpg==0.30.0",
  "meilisearch-python-sdk==2.9.0",
  "bcrypt==4.0.1",
  "email-validator==2.0.0.post2",
  "pytest==7.4.0",
  "pytest-postgresql==6.1.1",
  "async-asgi-testclient==1.4.11",
  "pytest-asyncio==0.21.1",
  "aiohttp==3.12.14",
  "apscheduler==3.11.0",
  "alembic==1.11.3",
  "aioboto3==12.4.0",
  "python-multipart==0.0.20",
  "puremagic==1.15",
  "imagesize==1.4.1",
  "sqlalchemy-utils==0.41.1",
  "requests==2.32.4",
  "gunicorn==23.0.0",
  "prometheus-fastapi-instrumentator==7.0.0",
  "pyinstrument==4.6.2",
  "certifi==2024.07.04",
  "starlette==0.47.2",
  "h11==0.16.0",
  "setuptools==78.1.1",
]

[tool.poetry]
package-mode = false



[tool.pytest.ini_options]
python_functions = "test_*"
python_files = "test_*.py"
asyncio_mode = "auto"
testpaths = "tests"
pythonpath = ["."]

[tool.ruff]
line-length = 80
exclude = [".venv", "venv", "alembic"]

[tool.ruff.lint]
extend-ignore = [
    "F821",  # Disable checks for annotated SQLAlchemy relations 
]

[tool.pyright]
reportUninitializedInstanceVariable = false
reportUnannotatedClassAttribute = false
reportCallInDefaultInitializer = false
reportUnusedCallResult = false
reportAny = false
